--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 appnope==0.1.0
 backcall==0.1.0
 bleach==3.0.2
+Click==7.0
 cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 entrypoints==0.2.3
+Flask==1.0.2
+Flask-Cors==3.0.6
 ipykernel==5.1.0
 ipython==7.0.1
 ipython-genutils==0.2.0
 ipywidgets==7.4.2
+ItsDangerous==1.0.0
 jedi==0.13.1
 Jinja2==2.10
 jsonschema==2.6.0
@@ -48,6 +52,8 @@ terminado==0.8.1
 testpath==0.4.2
 tornado==5.1.1
 traitlets==4.3.2
+waitress==1.1.0
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.14.1
 widgetsnbextension==3.4.2
